Delete more enable-preview-flag stuff