@@ -102,10 +102,6 @@ gradlePlugin {
             id = 'com.palantir.baseline-release-compatibility'
             implementationClass = 'com.palantir.baseline.plugins.BaselineReleaseCompatibility'
         }
-        baselineEnablePreviewFlag {
-            id = 'com.palantir.baseline-enable-preview-flag'
-            implementationClass = 'com.palantir.baseline.plugins.BaselineEnablePreviewFlag'
-        }
         baselinePreferProjectModules {
             id = 'com.palantir.baseline-prefer-project-modules'
             implementationClass = 'com.palantir.baseline.plugins.BaselinePreferProjectModules'
@@ -146,9 +142,6 @@ pluginBundle {
         }
         baselineReleaseCompatibility {
             displayName = 'Palantir Baseline Release Compatibility Plugin'
-        }
-        baselineEnablePreviewFlag {
-            displayName = 'Palantir Baseline --enable-preview Flag Plugin'
         }
         baselinePreferProjectModules {
             displayName = 'Palantir Baseline Prefer Project Modules Plugin'
